[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/in_game/in_game_ui.gd" type="Script" id=1]
[ext_resource path="res://ui/in_game/windows/crafting_window.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/in_game/inventory/inventory_grid.tscn" type="PackedScene" id=3]

[node name="InGameUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CraftingWindow" parent="." instance=ExtResource( 2 )]

[node name="InventoryWindow" type="WindowDialog" parent="." groups=[
"ui_windows",
]]
margin_right = 48.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryWindow"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PlayerInventory" parent="InventoryWindow/HBoxContainer" instance=ExtResource( 3 )]

[node name="TargetInventory" parent="InventoryWindow/HBoxContainer" instance=ExtResource( 3 )]
